zellij-utils/src/kdl/snapshots/zellij_utils__kdl__serialize_and_deserialize_session_info_with_data.snap
---
source: zellij-utils/src/kdl/mod.rs
expression: serialized
---
name "my session name"
tabs {
    tab {
        position 0
        name "tab 1"
        active true
        panes_to_hide 1
        is_fullscreen_active true
        is_sync_panes_active false
        are_floating_panes_visible true
        other_focused_clients 2 3
        active_swap_layout_name "BASE"
        viewport_rows 10
        viewport_columns 10
        display_area_columns 10
        display_area_rows 10
        is_swap_layout_dirty true
        selectable_tiled_panes_count 10
        selectable_floating_panes_count 10
        tab_id 0
    }
    tab {
        position 1
        name "tab 2"
        active true
        panes_to_hide 0
        is_fullscreen_active false
        is_sync_panes_active true
        are_floating_panes_visible true
        other_focused_clients 2 3
        viewport_rows 10
        viewport_columns 10
        display_area_columns 10
        display_area_rows 10
        is_swap_layout_dirty false
        selectable_tiled_panes_count 10
        selectable_floating_panes_count 10
        tab_id 1
    }
}
panes {
    pane {
        id 1
        is_plugin false
        is_focused true
        is_fullscreen true
        is_floating false
        is_suppressed false
        title "pane 1"
        exited false
        is_held false
        pane_x 0
        pane_content_x 1
        pane_y 0
        pane_content_y 1
        pane_rows 5
        pane_content_rows 4
        pane_columns 22
        pane_content_columns 21
        cursor_coordinates_in_pane 0 0
        terminal_command "foo"
        is_selectable true
        tab_position 0
    }
    pane {
        id 1
        is_plugin true
        is_focused true
        is_fullscreen true
        is_floating false
        is_suppressed false
        title "pane 1"
        exited false
        is_held false
        pane_x 0
        pane_content_x 1
        pane_y 0
        pane_content_y 1
        pane_rows 5
        pane_content_rows 4
        pane_columns 22
        pane_content_columns 21
        cursor_coordinates_in_pane 0 0
        plugin_url "i_am_a_fake_plugin"
        is_selectable true
        tab_position 0
    }
}
connected_clients 2
web_clients_allowed true
web_client_count 2
available_layouts {
    layout1 source="file"
    layout2 source="built-in"
    layout3 source="file"
}
tab_history {
}
pane_history {
}
creation_time 300
workspace_root "/home/aviram/my-project"
agent_states {
    agent type="terminal" 7 state="working" label="claude" seen=true
    agent type="plugin" 3 state="blocked" label="codex" seen=false
}
dock_state mode="closed" updated_at_millis=42

